--- a/static/main.css
+++ b/static/main.css
@@ -93,14 +93,14 @@ body {
   right:0;
   height:100%;
   padding:0px;
+  z-index:99;
 }
 
 }
 
 @media (max-width: 768px) {
   .main-app-body {
-    padding-left: 90px;
-    padding-right: 10px;
+    padding:80px 20px;
   }
 
   .display-quad {
