--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Manrope', sans-serif;
 }
 
 body {
@@ -130,5 +131,9 @@ body {
 
   .display-trio > *:nth-child(3) {
     width: 100%;
+  }
+
+  .standalone-component{
+    padding-top:0px;
   }
 }
